# multi-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  multi_agent.example.toml  multi_agent.toml  pyproject.toml
.github/workflows/: ci.yml
hooks/: pre-commit
src/multi_agent/: __init__.py  __main__.py  agents.py  arbitration.py  backend.py  claude_runner.py  cli.py  config.py  consensus.py  context.py  hook.py  logging.py  merge.py  models.py  output.py
tests/: conftest.py  test_agents.py  test_ask.py  test_claude_runner.py  test_config.py  test_consensus.py  test_context.py  test_merge.py  test_models.py
