[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent"
version = "0.1.0"
description = "Multi-agent consensus review system"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "diff-match-patch>=20230430",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
multi-agent = "multi_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_agent"]
